<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TweetMe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="foo_label">\@foo</string>
    <string name="tweet_body">This is the tweet body</string>
    <string name="time_ago_label">Time</string>
    <string name="action_compose">Compose</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="compose_label">Enter your tweet:</string>
    <string name="tweet_button">Tweet it!</string>
    <string name="tweet_hint">Say something...</string>
    <string name="title_activity_tweet_view">TweetViewActivity</string>
    <string name="user_name_label">user_name</string>
    <string name="reply_button_label">Reply</string>
    <string name="action_profile">View Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="name_label">Name</string>
    <string name="tagline_label">Tagline</string>
    <string name="followers_label"># followers</string>
    <string name="following_label"># following</string>

</resources>