<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <FrameLayout
        android:id="@+id/flTimelineFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/llFollowers"
        android:layout_marginTop="14dp" />

    <RelativeLayout
        android:id="@+id/rlProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/ivProfileViewImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tvProfileViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ivProfileViewImage"
            android:layout_marginLeft="18dp"
            android:layout_toRightOf="@+id/ivProfileViewImage"
            android:text="@string/name_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvProfileViewTagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvProfileViewName"
            android:layout_below="@+id/tvProfileViewName"
            android:text="@string/tagline_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/rlProfile"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvNumFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvNumFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/following_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</RelativeLayout>
